--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.10.0",
+    "react-simple-maps": "^3.0.0",
     "sass": "^1.62.0",
     "weather-icons-react": "^1.2.0"
   },
@@ -24,6 +26,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-icons": "^3.0.0",
+    "@types/react-simple-maps": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0-beta.0",
